--- a/wkim/build.gradle
+++ b/wkim/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'maven-publish'
 }
-group = "com.github.wyy-dev"
-version = "1.0.0"
+//group = "com.github.wyy-dev"
+//version = "1.0.1"
 
 afterEvaluate {
     publishing {
@@ -14,7 +14,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.wyy-dev'
                 artifactId = 'wkim'
-                version = '1.0'
+                version = '1.0.1'
             }
         }
     }
