--- a/wkim/build.gradle
+++ b/wkim/build.gradle
@@ -1,24 +1,25 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'maven-publish'
+//    id 'maven-publish'
+    id "com.vanniktech.maven.publish" version "0.28.0"
 }
 //group = "com.github.wyy-dev"
 //version = "1.0.1"
 
-afterEvaluate {
-    publishing {
-        publications {
+//afterEvaluate {
+//    publishing {
+//        publications {
             // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.wyy-dev'
-                artifactId = 'wkim'
-                version = '1.0.1'
-            }
-        }
-    }
-}
+//            release(MavenPublication) {
+//                from components.release
+//                groupId = 'com.github.wyy-dev'
+//                artifactId = 'wkim'
+//                version = '1.0.1'
+//            }
+//        }
+//    }
+//}
 
 //afterEvaluate {
 //    publishing {
@@ -72,4 +73,40 @@ dependencies {
     implementation 'org.whispersystems:curve25519-android:0.5.0'
     implementation 'org.whispersystems:signal-protocol-android:2.8.1'
 }
+import com.vanniktech.maven.publish.SonatypeHost
+mavenPublishing {
+//    publishToMavenCentral(SonatypeHost.DEFAULT)
+    // or when publishing to https://s01.oss.sonatype.org
+//    publishToMavenCentral(SonatypeHost.S01)
+    // or when publishing to https://central.sonatype.com/
+    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
 
+    signAllPublications()
+
+    coordinates("io.github.wyy-dev", "wkim", "0.0.1")
+    pom {
+        name = "wkim"
+        description = "WKIM"
+        inceptionYear = "2024"
+        url = "https://github.com/wyy-dev/WuKongIMAndroidSDK/"
+        licenses {
+            license {
+                name = "The Apache License, Version 2.0"
+                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+            }
+        }
+        developers {
+            developer {
+                id = "wyy-dev"
+                name = "wyy"
+                url = "https://github.com/wyy-dev/"
+            }
+        }
+        scm {
+            url = "https://github.com/wyy-dev/WuKongIMAndroidSDK/"
+            connection = "scm:git:git://github.com/wyy-dev/WuKongIMAndroidSDK.git"
+            developerConnection = "scm:git:ssh://git@github.com/wyy-dev/WuKongIMAndroidSDK.git"
+        }
+    }
+}
