--- a/wkim/build.gradle
+++ b/wkim/build.gradle
@@ -66,12 +66,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api files('libs/xSocket-2.8.15.jar')
+    implementation files('libs/xSocket-2.8.15.jar')
     implementation 'com.android.support:multidex:1.0.3'
-    implementation "net.zetetic:android-database-sqlcipher:4.5.3"
-    implementation "androidx.sqlite:sqlite:2.3.1"
-    implementation 'org.whispersystems:curve25519-android:0.5.0'
-    implementation 'org.whispersystems:signal-protocol-android:2.8.1'
+    api "net.zetetic:android-database-sqlcipher:4.5.3"
+    api "androidx.sqlite:sqlite:2.3.1"
+    api 'org.whispersystems:curve25519-android:0.5.0'
+    api 'org.whispersystems:signal-protocol-android:2.8.1'
 }
 import com.vanniktech.maven.publish.SonatypeHost
 mavenPublishing {
@@ -83,7 +83,7 @@ mavenPublishing {
 
     signAllPublications()
 
-    coordinates("io.github.wyy-dev", "wkim", "0.0.1")
+    coordinates("io.github.wyy-dev", "wkim", "0.0.3")
     pom {
         name = "wkim"
         description = "WKIM"
